@@ -1,0 +1,42 @@
+#!/usr/bin/r -t
+#
+# Copyright (C) 2010	Dirk Eddelbuettel and Romain Francois
+#
+# This file is part of Rcpp.
+#
+# Rcpp is free software: you can redistribute it and/or modify it
+# under the terms of the GNU General Public License as published by
+# the Free Software Foundation, either version 2 of the License, or
+# (at your option) any later version.
+#
+# Rcpp is distributed in the hope that it will be useful, but
+# WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU General Public License for more details.
+#
+# You should have received a copy of the GNU General Public License
+# along with Rcpp.  If not, see <http://www.gnu.org/licenses/>.
+
+.setUp <- function(){
+	suppressMessages( require( inline ) )
+}
+
+test.S4 <- function(){
+	funx <- cfunction(signature(x = "ANY" ), '
+	RObject y(x) ;
+	List res(5) ;
+	res[0] = y.isS4() ;
+	res[1] = y.hasSlot("x") ;
+	res[2] = y.hasSlot("z") ;
+	res[3] = y.slot("x") ;
+	res[4] = y.slot("y") ;
+	return res ;
+	', Rcpp=TRUE, verbose=FALSE, includes = "using namespace Rcpp;" )
+	setClass("track",
+           representation(x="numeric", y="numeric"))
+	tr <- new( "track", x = 2, y = 2 )
+	checkEquals( funx(tr),
+		list( TRUE, TRUE, FALSE, 2.0, 2.0 )
+	, msg = "slot management" )
+}
+
