@@ -1,5 +1,9 @@
 2010-01-07  Romain Francois <francoisromain@free.fr>
 
+	* src/Rcpp/RObject.h: added methods "isS4", "slot" 
+	and "hasSlot" to deal with S4 objects
+	* inst/unitTests/runit.S4.R: unit tests
+
 	* src/Rcpp/ComplexVector.h: new class Rcpp::ComplexVector
 	to manage ... complex vectors (CPLXSXP)
 	* src/ComplexVector.cpp: implementation
